[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1", features = ["openssl"] }
actix-files="0.5.0"
openssl = { version = "0.10.64" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
futures = "0.3"
derive_more = { version = "0.99.17", features = [] }
log = { version = "0.4.20", features = [] }
env_logger = "0.8.4"